--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -1,4 +1,6 @@
+//@import "settings/_settings.main";
+//@import "components/_components.main";
+@import "_tailwind";
 body {
-  background: lightgray;
   font-family: sans-serif;
 }
